fixed hero background img not showing issue and added alt for destinations imgs

--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,7 @@ header li a:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: url(/images/hero_bg.jpg) no-repeat;
+  background: url(../images/hero_bg.jpg) no-repeat;
   background-size: cover;
   position: relative;
   padding: 0 3rem;
